@@ -1,5 +1,6 @@
 dist_sources = oprofiled.c opd_stats.c opd_kernel.c opd_image.c opd_sample_files.c \
-	opd_image.h opd_printf.h opd_stats.h opd_kernel.h opd_sample_files.h p_module.h
+	opd_image.h opd_printf.h opd_stats.h opd_kernel.h opd_sample_files.h \
+	p_module.h opd_cookie.h
 
 EXTRA_DIST = $(dist_sources)
 
