@@ -1,5 +1,12 @@
 2003-01-10  John Levon  <levon@movementarian.org>
 
+	* daemon/opd_cookie.h: insulate against missing arch support
+	  for sys_lookup_dcookie
+
+	* daemon/opd_image.c: use the above
+
+2003-01-10  John Levon  <levon@movementarian.org>
+
 	* daemon/opd_image.c:
 	* daemon/oprofiled.c: move complete_dump to a better place
 
